--- a/index.html
+++ b/index.html
@@ -18,36 +18,38 @@
   </head>
   <body>
     <!-- ============ HEADER ============-->
-    <header>
-      <div class="container header-container">
-        <nav class="nav">
-          <a href="./index.html" class="logo"
-            >Web<span class="logo-accent">Studio</span></a
-          >
-          <ul class="nav-list">
-            <li class="nav-item">
-              <a href="./index.html" class="nav-link">Studio</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link">Portfolio</a>
-            </li>
-            <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
-          </ul>
-        </nav>
-        <address class="address">
-          <ul class="address-list">
-            <li class="address-item">
-              <a href="mailto:info@devstudio.com" class="address-link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="address-item">
-              <a href="tel:+110001111111" class="address-link"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
+    <header class="header">
+      <div class="container">
+        <div class="header-container">
+          <nav class="header-nav">
+            <a href="./index.html" class="logo"
+              >Web<span class="logo-accent">Studio</span></a
+            >
+            <ul class="nav-list">
+              <li class="nav-item">
+                <a href="./index.html" class="nav-link">Studio</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Portfolio</a>
+              </li>
+              <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
+            </ul>
+          </nav>
+          <address class="address">
+            <ul class="address-list">
+              <li class="address-item">
+                <a href="mailto:info@devstudio.com" class="address-link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="address-item">
+                <a href="tel:+110001111111" class="address-link"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
       </div>
     </header>
     <!-- ============ /HEADER ============-->
@@ -109,8 +111,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="sub-title">Mark Guerrero</h3>
-              <p class="text">Product Designer</p>
+              <div class="team-card">
+                <h3 class="team-sub-title">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -119,8 +123,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="sub-title">Tom Ford</h3>
-              <p class="text">Frontend Developer</p>
+              <div class="team-card">
+                <h3 class="team-sub-title">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -129,8 +135,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="sub-title">Camila Garcia</h3>
-              <p class="text">Marketing</p>
+              <div class="team-card">
+                <h3 class="team-sub-title">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -139,8 +147,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="sub-title">Daniel Wilson</h3>
-              <p class="text">UI Designer</p>
+              <div class="team-card">
+                <h3 class="team-sub-title">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -149,7 +159,7 @@
       <!-- ============ OUR PORTFOLIO SECTION ============-->
       <section>
         <div class="container">
-          <h2 class="section-title portfolio-title">Our Portfolio</h2>
+          <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <img
@@ -158,8 +168,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="sub-title">Banking App</h3>
-              <p class="text">App</p>
+              <div class="portfolio-card">
+                <h3 class="sub-title">Banking App</h3>
+                <p class="text">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -168,8 +180,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="sub-title">Cashless Payment</h3>
-              <p class="text">Marketing</p>
+              <div class="portfolio-card">
+                <h3 class="sub-title">Cashless Payment</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -178,8 +192,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="sub-title">Meditation App</h3>
-              <p class="text">App</p>
+              <div class="portfolio-card">
+                <h3 class="sub-title">Meditation App</h3>
+                <p class="text">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -188,8 +204,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="sub-title">Taxi Service</h3>
-              <p class="text">Marketing</p>
+              <div class="portfolio-card">
+                <h3 class="sub-title">Taxi Service</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -198,8 +216,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="sub-title">Screen Illustrations</h3>
-              <p class="text">Design</p>
+              <div class="portfolio-card">
+                <h3 class="sub-title">Screen Illustrations</h3>
+                <p class="text">Design</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -208,8 +228,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="sub-title">Online Courses</h3>
-              <p class="text">Marketing</p>
+              <div class="portfolio-card">
+                <h3 class="sub-title">Online Courses</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -218,14 +240,16 @@
     </main>
     <!-- ============ FOOTER SECTION ============-->
     <footer class="footer-section">
-      <div class="container footer-container">
-        <a href="./index.html" class="logo-footer"
-          >Web<span class="logo-span-footer">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container">
+        <div class="footer-container">
+          <a href="./index.html" class="logo-footer"
+            >Web<span class="logo-span-footer">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
       </div>
     </footer>
     <!-- ============ /FOOTER SECTION ============-->
